adding SQL consumer